--- a/QR Code Project/index.html
+++ b/QR Code Project/index.html
@@ -11,6 +11,7 @@
     <input type="text" id="text" placeholder="Text to encode">
     <button onclick="generateQR()">Generate QR Code</button>
     <div id="qrcode"></div>
+    <button id="downloadButton" style="display: none;" onclick="downloadQR()">Download QR Code</button>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script src="index.js"></script>
 </body>
